# iq_amp_control

./: CMakeLists.txt  LICENSE  README.md  build.sh
CMake/debian/: postinst  postrm  preinst
files/remotes/: dnt_rc11
files/systemd/: local.ir-event.service  local.ir-keytable.service  local.mechanical-controls-mpd.service
src/: ir_event.c  ir_event_mpd.c  mechanical_controls.c  mechanical_controls_mpd.c
